--- a/Youtube Spam Comment Detection.ipynb
+++ b/Youtube Spam Comment Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "(892, 7)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "4  වොයිස් එකට හදපන්කෝ හොද සිංදුවක්,, අඩන සිංදු නැ...        0        1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "97"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -197,13 +197,13 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv = CountVectorizer()\n",
+    "cv = CountVectorizer(token_pattern='([^\\s]+)')\n",
     "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=4)\n",
     "x_train_vectorized = cv.fit_transform(x_train)\n",
     "a = x_train_vectorized.toarray()\n",
@@ -212,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1053"
+       "2971"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,16 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array(['අපට', 'ඇඩ', 'කර', 'ගහපල', 'තන', 'බලන', 'මග', 'මන'], dtype='<U24')]"
+       "[array(['අපට', 'ඇඩ්මනෙ', 'ගහපල්ලා', 'තනිකර', 'බලන', 'මගුල', 'මේව'],\n",
+       "       dtype='<U108')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +282,7 @@
        "'මේව බලන අපට ගහපල්ලා මගුල ඇඩ්මනෙ තනිකර'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +302,7 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,17 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<179x1053 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 1198 stored elements in Compressed Sparse Row format>"
+       "<179x2971 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 1112 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -343,16 +344,16 @@
       "text/plain": [
        "array([0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,\n",
        "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
        "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       1, 0, 0], dtype=int64)"
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +374,7 @@
        "179"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +402,7 @@
        "       1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,16 +414,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "172"
+       "163"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +448,7 @@
        "0.9608938547486033"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
