--- a/Spam features.ipynb
+++ b/Spam features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "(892, 7)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,6 +22,7 @@
     "import re\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
     "\n",
     "df = pd.read_csv('youtube-comments.csv')\n",
     "df.shape"
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,7 @@
        "4  වොයිස් එකට හදපන්කෝ හොද සිංදුවක්,, අඩන සිංදු නැ...        0        1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +294,7 @@
        "4         0              0          0          0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +486,7 @@
        "22         1              0          0          0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +506,7 @@
        "'Vodi free reload ❤❤❤????????\\n\\nලේසියෙන්ම Reload ගන්න පුලුවන් ඇප් එකක් තමා vodi කියන්නෙ. කරන්න තියෙන්නෙ මෙච්චරයි play story යෙන් vodi app එක ගන්න register වෙද්දි referral code එකට මතක ඇතුව NTM479  ගහන්න. ඊට පස්සෙ මට මැසේජ් එකක් දාන්න referral එක ගහල register උනු අය. points 40 අරන් දෙන්නම් මන් ඊට පස්සෙ.code එක ගැහුවේ නැත්තම් එන් නැ හොදේ.\\nDent වගේ invite කරන්න ඕන් නැ points හොයන්න.Ad තියෙනව බලන්න.ඒවයින් පොඉන්ට් හොයන්න පුලුවන්. \\nAdd උනු අයට call අරන් points හොයන්නත් පුලුවන් ලේසියෙන්ම (ඇඩ් උනු අයගේ group හදල තියෙන්නෙ ඒකට) .... call ගත්තට සල්ලි කැපෙන් නෑ \\nCall එක තප්.3 වගේ තියල කට් කරාම හරි...එක call එකකට points 3 ගානෙ එනවා.\\nඑහෙම එකතු කරල reload ගන්න පුලුවන් \\u2063ලේසියෙන්ම...\\n\\n????????????????????????????????????????????????????????????????????????????????????\\nDead heart'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +596,7 @@
        "4         0              0          0          0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +618,7 @@
        "GaussianNB(priors=None, var_smoothing=1e-09)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +648,7 @@
        "       1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +677,7 @@
        "       1, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +698,7 @@
        "172"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +723,7 @@
        "179"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +743,7 @@
        "0.9608938547486033"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,6 +751,26 @@
    "source": [
     "accuracy = 172/179.0\n",
     "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9608938547486033"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, pred)"
    ]
   }
  ],
